# constexpr-cityhash

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: constexprhashConfig.cmake.in
src/: cityhash.hpp
src/constexprhash/: cityhash.hpp
test/: test_cityhash.cpp
